--- a/native_android.html
+++ b/native_android.html
@@ -39,6 +39,7 @@ title: Native Android
 
 
 <h3><a name="complete"></a>Complete Apps</h3>
+
 <p><a name="BioZen-Android"></a><h5>BioZen</h5>BioZen is one of the first mobile applications to provide users with live biofeedback data from multiple wearable body sensors covering a range of biophysiological signals, including electroencephalogram (EEG), electromyography (EMG), galvanic skin response (GSR), electrocardiogram (ECG or EKG), respiratory rate, and temperature biofeedback data and display it on a mobile phone.
 <br>
 Using BioZen requires compatible biosensor devices. These devices and BioZen are not designed or intended for psychological therapy or medical treatments. For more information, see <a href="http://t2health.org/apps/biozen">the official site</a>.<br>
@@ -68,12 +69,33 @@ Capitalizing on touch-screen technology, a user can record their stress level on
 <strong>Source:</strong> Federal
 </p>
 
+
+
+<p><a name="malariaapp"></a><h5>Malaria App
+</h5>Creating a mobile tool for Malaria prevention, information, and medicine tracking.<br>
+<strong>Link:</strong> <a href="https://github.com/PeaceCorps/malaria-app-android">https://github.com/PeaceCorps/malaria-app-android
+</a><br>
+<strong>Source:</strong> PeaceCorps
+</p>
+
+
 <p><a name="mTBI-Toolkit-Android"></a><h5>Mild Traumatic Brain Injury Pocket Guide</h5>The Mild Traumatic Brain Injury Pocket Guide HTML5 mobile iOS and native Android application for health care providers gives instant access to a comprehensive quick-reference guide on improving care for mTBI patients. Designed to reflect current clinical standards of care, the mTBI Pocket Guide mobile application can help you improve quality of care and clinical outcomes for patients.
 <br>
 Military and civilian physicians, physician assistants, nurse practitioners, and related treatment and therapy providers can use the application to find information on assessing, treating, and managing common symptoms of mTBI patients<br>
 <strong>Link:</strong> <a href="https://github.com/t2health/mTBI-Toolkit-Android">https://github.com/t2health/mTBI-Toolkit-Android</a><br>
 <strong>Source:</strong> Federal
 </p>
+
+
+<p><a name="OSHA-Heat-Safety-Android-En"></a><h5>OSHA Heat Safety</h5>This app allows workers and supervisors to calculate the heat index for their worksite, and, based on the heat index, displays a risk level to outdoor workers.<br>
+<strong>Links:</strong>
+<ul>
+	<li><a href="https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-Android-En">https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-Android-En</a> (English)</li>
+	<li><a href="https://github.com/USDepartmentofLabor/OAHA-Heat-Safety-Android-Es">https://github.com/USDepartmentofLabor/OAHA-Heat-Safety-Android-Es</a> (Spanish)</li>
+</ul>
+<strong>Source:</strong> Federal
+</p>
+
 
 <p><a name="PECoach-Android"></a><h5>PE Coach</h5>PE Coach is the first mobile app designed to support the tasks associated with prolonged exposure treatment for PTSD. Providing hip-pocket access to the necessary tools for successful PE participation, the app includes audio recording capability for easy playback after sessions; tools to support patient tasks between sessions; and visual displays of symptom reduction over time.In addition, PE Coach is integrated with smartphone calendar functionality to encourage patient recall and session attendance.
 <br>
@@ -89,6 +111,17 @@ Your responses to a short self-assessment create ratings of your risk for compas
 <strong>Source:</strong> Federal
 </p>
 
+
+
+<p><a name="realtrack"></a><h5>RealTrack</h5>RealTrack is an Android smartphone application designed to facilitate day-to-day data collection by Peace Corps Volunteers (PCV) in the field.
+<br>
+<strong>Link:</strong> <a href="https://github.com/PeaceCorps/realtrack-android">https://github.com/PeaceCorps/realtrack-android
+</a><br>
+<strong>Source:</strong> PeaceCorps
+
+</p>
+
+
 <p><a name="android-swipelistview"></a><h5>SwipeListView Demo</h5>An Android List View implementation with support for drawable cells and many other swipe related features.<br>
 This is a sample app for the open source project at <a href="https://github.com/47deg/android-swipelistview">https://github.com/47deg/android-swipelistview</a>.
 <br>
@@ -96,14 +129,6 @@ This is a sample app for the open source project at <a href="https://github.com/
 <strong>Source:</strong> Third party
 </p>
 
-<p><a name="OSHA-Heat-Safety-Android-En"></a><h5>OSHA Heat Safety</h5>This app allows workers and supervisors to calculate the heat index for their worksite, and, based on the heat index, displays a risk level to outdoor workers.<br>
-<strong>Links:</strong>
-<ul>
-	<li><a href="https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-Android-En">https://github.com/USDepartmentofLabor/OSHA-Heat-Safety-Android-En</a> (English)</li>
-	<li><a href="https://github.com/USDepartmentofLabor/OAHA-Heat-Safety-Android-Es">https://github.com/USDepartmentofLabor/OAHA-Heat-Safety-Android-Es</a> (Spanish)</li>
-</ul>
-<strong>Source:</strong> Federal
-</p>
 
 <p><a name="T2-Mood-Tracker-Android"></a><h5>T2 Mood Tracker</h5>An Android and iOS mobile application that allows users to self-monitor, track and reference their emotional experience over a period of days, weeks and months using a visual analogue rating scale.
 <br>
