--- a/native_ios.html
+++ b/native_ios.html
@@ -1,3 +1,4 @@
+
 ---
 layout: page
 title: Native iOS
@@ -25,6 +26,19 @@ title: Native iOS
 </ul>
 <strong>Source:</strong> Federal
 </p>
+
+
+<p><a name="iplover"></a><h5>iPlover
+</h5>iPlover mobile HTML5 app - A Smartphone Application to Characterize Piping Plover Nest Locations.<br>
+<strong>Link:</strong> <a href="https://github.com/USGS-CIDA/iPlover
+">https://github.com/USGS-CIDA/iPlover
+</a><br>
+<strong>Source:</strong> USGS
+
+</p>
+
+
+
 <p><a name="MagicalRecord"></a><h5>MagicalRecord</h5>Active record interface for Core Data.<br>
 <strong>Link:</strong> <a href="https://github.com/magicalpanda/MagicalRecord">https://github.com/magicalpanda/MagicalRecord</a><br>
 <strong>Source:</strong> Third party
@@ -33,6 +47,7 @@ title: Native iOS
 <strong>Link:</strong> <a href="https://github.com/jverkoey/nimbus">https://github.com/jverkoey/nimbus</a><br>
 <strong>Source:</strong> Third party
 </p>
+
 <p><a name="three20"></a><h5>Three20</h5>Three20 is a collection of iPhone UI classes, like a photo viewer, and general utilities, like an HTTP disk cache. Three20 is derived from the <a href="http://phobos.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=284882215&mt=8">Facebook iPhone app</a>.<br>
 <strong>Link:</strong> <a href="https://github.com/facebook/three20">https://github.com/facebook/three20</a><br>
 <strong>Source:</strong> Third party
@@ -42,6 +57,13 @@ title: Native iOS
 <strong>Source:</strong> Specify Federal, Other Government, or Third party 
 </p>
  -->
+
+<p><a name="wsabi"></a><h5>WSABI
+</h5>iOS Client for WS-Biometric Devices.<br>
+<strong>Link:</strong> <a href="https://github.com/NIST-BWS/wsabi">https://github.com/NIST-BWS/wsabi
+</a><br>
+<strong>Source:</strong> NI</p>
+
 
 
 <h3><a name="complete"></a>Complete Apps</h3>
@@ -102,6 +124,15 @@ Your responses to a short self-assessment create ratings of your risk for compas
 <strong>Link:</strong> <a href="https://github.com/informaticslab/ptt-advisor">https://github.com/informaticslab/ptt-advisor</a><br>
 <strong>Source:</strong> Federal
 </p>
+
+<p><a name="realtrack"></a><h5>RealTrack
+</h5>Mobile data tracking notebook for Peace Corps Volunteers in the field to record hard to remember details of activities that they will be required to report on later.<br>
+<strong>Link:</strong> <a href="https://github.com/PeaceCorps/realtrack-ios">https://github.com/PeaceCorps/realtrack-ios
+</a><br>
+<strong>Source:</strong> PeaceCorps
+</p>
+
+
 <p><a name="StrategyTrackeriPad"></a><h5>StrategyTrackeriPad</h5>This is a sample project using the API SDK for iOS that demonstrates how it can be used for non-DOL APIs. This universal (iPhone & iPad) app displays a list of agencies provided by a GSA-owned web service that the user can then select to view that agency's progress with the digital strategy. Currently, the only agency list available is a list of all agencies, regardless of whether they're reporting progress on the federal digital strategy (some are agencies within a cabinet department).<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/StrategyTrackeriPad">https://github.com/USDepartmentofLabor/StrategyTrackeriPad</a><br>
 <strong>Source:</strong> Federal
