--- a/native_ios.html
+++ b/native_ios.html
@@ -16,7 +16,7 @@ title: Native iOS
 <p>Are you looking to avoid reinventing the wheel? You can use the <a href="#modular">modular code</a> below to help your project along.</p>
 <p>Do you need more of a head start?  Try customizing one of the <a href="#complete">complete apps</a> to fit your needs.</p>
 
-<p>&nbsp;</p>
+
 <h3><a name="modular"></a>Modular Code for iOS</h3>
 <p><a name="DOLDataSDK-iOS"></a><h5>Federal API SDK</h5>iOS SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/DOLDataSDK-iOS/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
 <strong>Links:</strong>
@@ -30,8 +30,7 @@ title: Native iOS
 
 <p><a name="iplover"></a><h5>iPlover
 </h5>iPlover mobile HTML5 app - A Smartphone Application to Characterize Piping Plover Nest Locations.<br>
-<strong>Link:</strong> <a href="https://github.com/USGS-CIDA/iPlover
-">https://github.com/USGS-CIDA/iPlover
+<strong>Link:</strong> <a href="https://github.com/USGS-CIDA/iPlover">https://github.com/USGS-CIDA/iPlover
 </a><br>
 <strong>Source:</strong> USGS
 
@@ -58,8 +57,7 @@ title: Native iOS
 </p>
  -->
 
-<p><a name="wsabi"></a><h5>WSABI
-</h5>iOS Client for WS-Biometric Devices.<br>
+<p><a name="wsabi"></a><h5>WSABI</h5>iOS Client for WS-Biometric Devices.<br>
 <strong>Link:</strong> <a href="https://github.com/NIST-BWS/wsabi">https://github.com/NIST-BWS/wsabi
 </a><br>
 <strong>Source:</strong> NI</p>
