Added the Calculate Heat Index Java class from the Mobile Code Chop Shop

--- a/native_android.html
+++ b/native_android.html
@@ -20,6 +20,11 @@ title: Native Android
 <strong>Link:</strong> <a href="https://github.com/jgilfelt/android-adt-templates">https://github.com/jgilfelt/android-adt-templates</a><br>
 <strong>Source:</strong> Third party
 </p>
+<p><a name="calculate-heat-index"></a><h5>Calculate Heat Index</h5>A Java class that will calculate the heat index.<br>
+<strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/Calculate-Heat-Index-Java">https://github.com/USDepartmentofLabor/Calculate-Heat-Index-Java</a><br>
+<strong>Source:</strong> Federal
+</p>
+
 <p><a name="Android_DOLDataSDK"></a><h5>Federal API SDK</h5>Android SDK to ease access to DOL's and other federal agencies' APIs. For a list of APIs that this SDK has been tested against, please see the <a href="https://github.com/USDepartmentofLabor/Android_DOLDataSDK/wiki">wiki</a>. For documentation and sample code, please visit <a href="http://developer.dol.gov">http://developer.dol.gov</a>.<br>
 <strong>Link:</strong> <a href="https://github.com/USDepartmentofLabor/Android_DOLDataSDK">https://github.com/USDepartmentofLabor/Android_DOLDataSDK</a><br>
 <strong>Source:</strong> Federal
