--- a/testing.html
+++ b/testing.html
@@ -42,7 +42,7 @@ title: Test Scripts
 <strong>Source:</strong> Federal
 </p>
 <p><a name="HHS-Main-Responsive-Web-Design-Application-Test-Script"></a><h5>HHS Main Site Responsive Design Test Script</h5>A test script using crowdsourced testing.<br>
-<strong>Link:</strong> <a href="https://github.com/GSA/Crowdsource-Testing-HHS-Main.gov">https://github.com/GSA/Crowdsource-Testing-HHS-Main.gov</a><br>
+<strong>Link:</strong> <a href="https://github.com/GSA/Crowdsource-Testing-HHS-Main">https://github.com/GSA/Crowdsource-Testing-HHS-Main.gov</a><br>
 <strong>Source:</strong> Federal
 </p>
 <p><a name="NOAA-National-Geophysical-Data-Center-NGDC-Android-CrowdMag-App-Test-Script"></a><h5>NOAA's National Geophysical Data Center (NGDC) Android CrowdMag App Test Script</h5>A test script using crowdsourced testing.<br>
